fixed page gaps

--- a/Web/styles/article.css
+++ b/Web/styles/article.css
@@ -29,8 +29,6 @@ body {
 
 .main-content {
   position:absolute;
-  top: 500px;
-  margin-top: 5rem;
 }
 
 #background_image {
