--- a/Web/styles/gallery.css
+++ b/Web/styles/gallery.css
@@ -21,7 +21,6 @@
 }
 
 .main h2 {
-  margin-top: 5rem;
   word-break: break-all;
 }
 
