--- a/Web/styles/news.css
+++ b/Web/styles/news.css
@@ -36,10 +36,6 @@ body {
   width: 700px;
 }
 
-.news-title {
-  margin-top: 6rem;
-}
-
 .main-content table {
   border-collapse: separate;
   border-spacing: 0px 100px;
